added jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -138,7 +138,7 @@ pipeline {
         stage(' Deploy Staging') {
             agent {
                 docker {
-                    image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+                    image 'my-playwright'
                     reuseNode true
                 }
             }
@@ -149,13 +149,18 @@ pipeline {
 
             steps {
                 sh '''
-                    npm install netlify-cli@20.1.1 node-jq
-                    node_modules/.bin/netlify --version
+                    #npm install netlify-cli@20.1.1 node-jq
+                    #node_modules/.bin/netlify --version
+                    netlify --version
                     echo "Deploying to staging. Site ID: $NETLIFY_SITE_ID"
-                    node_modules/.bin/netlify status
-                    node_modules/.bin/netlify deploy --dir=build --json > deploy-output.json
-                    node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json
-                    CI_ENVIRONMENT_URL=$(node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json)
+                    #node_modules/.bin/netlify status
+                    netlify status
+                    #node_modules/.bin/netlify deploy --dir=build --json > deploy-output.json
+                    netlify deploy --dir=build --json > deploy-output.json
+                    #node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json
+                    node-jq -r '.deploy_url' deploy-output.json
+                    #CI_ENVIRONMENT_URL=$(node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json)
+                    CI_ENVIRONMENT_URL=$(node-jq -r '.deploy_url' deploy-output.json)
                     npx playwright test  --reporter=html
                 '''
             }
@@ -222,7 +227,7 @@ pipeline {
      stage('Deploy Prod') {
             agent {
                 docker {
-                    image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+                    image 'my-playwright'
                     reuseNode true
                 }
             }
@@ -234,11 +239,14 @@ pipeline {
             steps {
                 sh '''
                 node --version
-                npm install netlify-cli@20.1.1
-                node_modules/.bin/netlify --version
+                #npm install netlify-cli@20.1.1
+                #node_modules/.bin/netlify --version
+                netlify --version
                 echo "Deploying to production. Site ID: $NETLIFY_SITE_ID"
-                node_modules/.bin/netlify status
-                node_modules/.bin/netlify deploy --dir=build --prod
+                #node_modules/.bin/netlify status
+                netlify status
+                #node_modules/.bin/netlify deploy --dir=build --prod
+                netlify deploy --dir=build --prod
                 npx playwright test  --reporter=html
                 '''
             }
