--- a/JenkinsFile
+++ b/JenkinsFile
@@ -63,15 +63,16 @@ pipeline {
         stage('E2E') {
             agent {
                 docker {
-                    image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+                    image 'my-playwright'
                     reuseNode true
                 }
             }
 
             steps {
                 sh '''
-                    npm install serve
-                    node_modules/.bin/serve -s build &
+                    #npm install serve
+                    #node_modules/.bin/serve -s build &
+                    serve -s build &
                     sleep 10
                     npx playwright test  --reporter=html
                 '''
