--- a/JenkinsFile
+++ b/JenkinsFile
@@ -10,11 +10,11 @@ pipeline {
 
     stages {
 
-        stage('Docker') {
-            steps {
-                sh 'docker build -t my-playwright .'
-            }
-        }
+        // stage('Docker') {
+        //     steps {
+        //         sh 'docker build -t my-playwright .'
+        //     }
+        // }
 
         stage('Build') {
             agent {
