--- a/JenkinsFile
+++ b/JenkinsFile
@@ -159,9 +159,9 @@ pipeline {
                     #node_modules/.bin/netlify deploy --dir=build --json > deploy-output.json
                     netlify deploy --dir=build --json > deploy-output.json
                     #node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json
-                    node-jq -r '.deploy_url' deploy-output.json
-                    #CI_ENVIRONMENT_URL=$(node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json)
-                    CI_ENVIRONMENT_URL=$(node-jq -r '.deploy_url' deploy-output.json)
+                    jq -r '.deploy_url' deploy-output.json
+                    #CI_ENVIRONMENT_URL=$(node_modules/.bin/jq -r '.deploy_url' deploy-output.json)
+                    CI_ENVIRONMENT_URL=$(jq -r '.deploy_url' deploy-output.json)
                     npx playwright test  --reporter=html
                 '''
             }
