added aws stage

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -258,6 +258,20 @@ pipeline {
                 }
             }
     }
+
+     stage('AWS') {
+        agent{
+            docker{
+                image 'amazon/aws-cli'
+            }
+        }
+        
+        steps {
+            sh '''
+                aws --version
+            '''
+            }
+        }
 }
 }
 
