--- a/JenkinsFile
+++ b/JenkinsFile
@@ -263,6 +263,7 @@ pipeline {
         agent{
             docker{
                 image 'amazon/aws-cli'
+                args "--entrypoint=''"
             }
         }
         
