--- a/JenkinsFile
+++ b/JenkinsFile
@@ -270,6 +270,7 @@ pipeline {
         steps {
             sh '''
                 aws --version
+                aws s3 ls
             '''
             }
         }
