--- a/JenkinsFile
+++ b/JenkinsFile
@@ -268,10 +268,16 @@ pipeline {
         }
         
         steps {
-            sh '''
+            withCredentials([usernamePassword(credentialsId: 'my-aws', passwordVariable: 'AWS_SECRET_ACCESS_KEY', usernameVariable: 'AWS_ACCESS_KEY_ID')]) {
+                sh '''
                 aws --version
                 aws s3 ls
-            '''
+                '''
+                }
+            // sh '''
+            //     aws --version
+            //     aws s3 ls
+            // '''
             }
         }
 }
