--- a/JenkinsFile
+++ b/JenkinsFile
@@ -272,6 +272,8 @@ pipeline {
                 sh '''
                 aws --version
                 aws s3 ls
+                echo "hello s3!...." >>> index.html
+                aws s3 cp indx.html s3://learn-jenkins202511040815/index.html
                 '''
                 }
             // sh '''
