--- a/JenkinsFile
+++ b/JenkinsFile
@@ -273,7 +273,7 @@ pipeline {
                 aws --version
                 aws s3 ls
                 echo "hello s3!...." > index.html
-                aws s3 cp indx.html s3://learn-jenkins202511040815/index.html
+                aws s3 cp index.html s3://learn-jenkins202511040815/index.html
                 '''
                 }
             // sh '''
