--- a/JenkinsFile
+++ b/JenkinsFile
@@ -266,14 +266,17 @@ pipeline {
                 args "--entrypoint=''"
             }
         }
-        
+        environment{
+            AWS_S3_BUCKET = "learn-jenkins202511040815"
+        }
         steps {
             withCredentials([usernamePassword(credentialsId: 'my-aws', passwordVariable: 'AWS_SECRET_ACCESS_KEY', usernameVariable: 'AWS_ACCESS_KEY_ID')]) {
                 sh '''
                 aws --version
                 aws s3 ls
                 echo "hello s3!...." > index.html
-                aws s3 cp index.html s3://learn-jenkins202511040815/index.html
+                #aws s3 cp index.html s3://learn-jenkins202511040815/index.html
+                aws s3 cp index.html s3://$AWS_S3_BUCKET/index.html
                 '''
                 }
             // sh '''
