--- a/JenkinsFile
+++ b/JenkinsFile
@@ -16,32 +16,32 @@ pipeline {
         //     }
         // }
 
-        stage('AWS') {
-        agent{
-            docker{
-                image 'amazon/aws-cli'
-                args "--entrypoint=''"
-            }
-        }
-        environment{
-            AWS_S3_BUCKET = "learn-jenkins202511040815"
-        }
-        steps {
-            withCredentials([usernamePassword(credentialsId: 'my-aws', passwordVariable: 'AWS_SECRET_ACCESS_KEY', usernameVariable: 'AWS_ACCESS_KEY_ID')]) {
-                sh '''
-                aws --version
-                aws s3 ls
-                echo "hello s3!...." > index.html
-                #aws s3 cp index.html s3://learn-jenkins202511040815/index.html
-                aws s3 cp index.html s3://$AWS_S3_BUCKET/index.html
-                '''
-                }
-            // sh '''
-            //     aws --version
-            //     aws s3 ls
-            // '''
-            }
-        }
+        // stage('AWS') {
+        // agent{
+        //     docker{
+        //         image 'amazon/aws-cli'
+        //         args "--entrypoint=''"
+        //     }
+        // }
+        // environment{
+        //     AWS_S3_BUCKET = "learn-jenkins202511040815"
+        // }
+        // steps {
+        //     withCredentials([usernamePassword(credentialsId: 'my-aws', passwordVariable: 'AWS_SECRET_ACCESS_KEY', usernameVariable: 'AWS_ACCESS_KEY_ID')]) {
+        //         sh '''
+        //         aws --version
+        //         aws s3 ls
+        //         echo "hello s3!...." > index.html
+        //         #aws s3 cp index.html s3://learn-jenkins202511040815/index.html
+        //         aws s3 cp index.html s3://$AWS_S3_BUCKET/index.html
+        //         '''
+        //         }
+        //     // sh '''
+        //     //     aws --version
+        //     //     aws s3 ls
+        //     // '''
+        //     }
+        // }
 
         stage('Build') {
             agent {
@@ -286,32 +286,33 @@ pipeline {
             }
     }
 
-    //  stage('AWS') {
-    //     agent{
-    //         docker{
-    //             image 'amazon/aws-cli'
-    //             args "--entrypoint=''"
-    //         }
-    //     }
-    //     environment{
-    //         AWS_S3_BUCKET = "learn-jenkins202511040815"
-    //     }
-    //     steps {
-    //         withCredentials([usernamePassword(credentialsId: 'my-aws', passwordVariable: 'AWS_SECRET_ACCESS_KEY', usernameVariable: 'AWS_ACCESS_KEY_ID')]) {
-    //             sh '''
-    //             aws --version
-    //             aws s3 ls
-    //             echo "hello s3!...." > index.html
-    //             #aws s3 cp index.html s3://learn-jenkins202511040815/index.html
-    //             aws s3 cp index.html s3://$AWS_S3_BUCKET/index.html
-    //             '''
-    //             }
-    //         // sh '''
-    //         //     aws --version
-    //         //     aws s3 ls
-    //         // '''
-    //         }
-    //     }
+     stage('AWS') {
+        agent{
+            docker{
+                image 'amazon/aws-cli'
+                args "--entrypoint=''"
+            }
+        }
+        environment{
+            AWS_S3_BUCKET = "learn-jenkins202511040815"
+        }
+        steps {
+            withCredentials([usernamePassword(credentialsId: 'my-aws', passwordVariable: 'AWS_SECRET_ACCESS_KEY', usernameVariable: 'AWS_ACCESS_KEY_ID')]) {
+                sh '''
+                aws --version
+                #aws s3 ls
+                #echo "hello s3!...." > index.html
+                #aws s3 cp index.html s3://learn-jenkins202511040815/index.html
+                #aws s3 cp index.html s3://$AWS_S3_BUCKET/index.html
+                aws s3 sync build s3://$AWS_S3_BUCKET
+                '''
+                }
+            // sh '''
+            //     aws --version
+            //     aws s3 ls
+            // '''
+            }
+        }
 }
 }
 
