--- a/JenkinsFile
+++ b/JenkinsFile
@@ -333,7 +333,7 @@ pipeline {
             docker{
                 image 'amazon/aws-cli'
                 reuseNode true
-                args "--entrypoint=''"
+                args "-u root --entrypoint=''"
             }
         }
 
