added jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -342,10 +342,10 @@ pipeline {
                 sh '''
                 aws --version
                 yum install jq -y
-                // aws ecs register-task-definition --cli-input-json file://aws/task-definition.json
+                #aws ecs register-task-definition --cli-input-json file://aws/task-definition.json
                 LATEST_TD_REVISION=$(aws ecs register-task-definition --cli-input-json file://aws/task-definition.json | jq '.taskDefinition.revision')
                 echo $LATEST_TD_REVISION
-                // aws ecs update-service --cluster LearnJenkinsApp-cluster-prod --service LearnJenkinsApp-TaskDefinition-Prod-service --task-definition LearnJenkinsApp-TaskDefinition-Prod:2
+                #aws ecs update-service --cluster LearnJenkinsApp-cluster-prod --service LearnJenkinsApp-TaskDefinition-Prod-service --task-definition LearnJenkinsApp-TaskDefinition-Prod:2
                 aws ecs update-service --cluster LearnJenkinsApp-cluster-prod --service LearnJenkinsApp-TaskDefinition-Prod-service --task-definition LearnJenkinsApp-TaskDefinition-Prod:LATEST_TD_REVISION
                 '''
                 }
