added wait command

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -347,6 +347,7 @@ pipeline {
                 echo $LATEST_TD_REVISION
                 #aws ecs update-service --cluster LearnJenkinsApp-cluster-prod --service LearnJenkinsApp-TaskDefinition-Prod-service --task-definition LearnJenkinsApp-TaskDefinition-Prod:2
                 aws ecs update-service --cluster LearnJenkinsApp-cluster-prod --service LearnJenkinsApp-TaskDefinition-Prod-service --task-definition LearnJenkinsApp-TaskDefinition-Prod:$LATEST_TD_REVISION
+                aws ecs wait services-stable --cluster LearnJenkinsApp-cluster-prod --services LearnJenkinsApp-TaskDefinition-Prod-service
                 '''
                 }
             }
