--- a/JenkinsFile
+++ b/JenkinsFile
@@ -324,6 +324,9 @@ pipeline {
     environment {
         REACT_APP_VERSION = "1.0.$BUILD_ID"
         AWS_DEFAULT_REGION = 'us-east-1'
+        AWS_ECS_CLUSTER = 'LearnJenkinsApp-cluster-prod'
+        AWS_ECS_SERVICE_PROD = 'LearnJenkinsApp-TaskDefinition-Prod-service'
+        AWS_ECS_TD_PROD = 'LearnJenkinsApp-TaskDefinition-Prod'
     }
 
     stages {
@@ -346,8 +349,10 @@ pipeline {
                 LATEST_TD_REVISION=$(aws ecs register-task-definition --cli-input-json file://aws/task-definition.json | jq '.taskDefinition.revision')
                 echo $LATEST_TD_REVISION
                 #aws ecs update-service --cluster LearnJenkinsApp-cluster-prod --service LearnJenkinsApp-TaskDefinition-Prod-service --task-definition LearnJenkinsApp-TaskDefinition-Prod:2
-                aws ecs update-service --cluster LearnJenkinsApp-cluster-prod --service LearnJenkinsApp-TaskDefinition-Prod-service --task-definition LearnJenkinsApp-TaskDefinition-Prod:$LATEST_TD_REVISION
-                aws ecs wait services-stable --cluster LearnJenkinsApp-cluster-prod --services LearnJenkinsApp-TaskDefinition-Prod-service
+                #aws ecs update-service --cluster LearnJenkinsApp-cluster-prod --service LearnJenkinsApp-TaskDefinition-Prod-service --task-definition LearnJenkinsApp-TaskDefinition-Prod:$LATEST_TD_REVISION
+                aws ecs update-service --cluster $AWS_ECS_CLUSTER --service $AWS_ECS_SERVICE_PROD --task-definition $AWS_ECS_TD_PROD:$LATEST_TD_REVISION
+                #aws ecs wait services-stable --cluster LearnJenkinsApp-cluster-prod --services LearnJenkinsApp-TaskDefinition-Prod-service
+                aws ecs wait services-stable --cluster $AWS_ECS_CLUSTER --services $AWS_ECS_SERVICE_PROD
                 '''
                 }
             }
