build docker image

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -331,7 +331,59 @@ pipeline {
 
     stages {
 
-        stage('AWS') {
+        // stage('AWS') {
+        // agent{
+        //     docker{
+        //         image 'amazon/aws-cli'
+        //         reuseNode true
+        //         args "-u root --entrypoint=''"
+        //     }
+        // }
+
+        // steps {
+        //     withCredentials([usernamePassword(credentialsId: 'my-aws', passwordVariable: 'AWS_SECRET_ACCESS_KEY', usernameVariable: 'AWS_ACCESS_KEY_ID')]) {
+        //         sh '''
+        //         aws --version
+        //         yum install jq -y
+        //         #aws ecs register-task-definition --cli-input-json file://aws/task-definition.json
+        //         LATEST_TD_REVISION=$(aws ecs register-task-definition --cli-input-json file://aws/task-definition.json | jq '.taskDefinition.revision')
+        //         echo $LATEST_TD_REVISION
+        //         #aws ecs update-service --cluster LearnJenkinsApp-cluster-prod --service LearnJenkinsApp-TaskDefinition-Prod-service --task-definition LearnJenkinsApp-TaskDefinition-Prod:2
+        //         #aws ecs update-service --cluster LearnJenkinsApp-cluster-prod --service LearnJenkinsApp-TaskDefinition-Prod-service --task-definition LearnJenkinsApp-TaskDefinition-Prod:$LATEST_TD_REVISION
+        //         aws ecs update-service --cluster $AWS_ECS_CLUSTER --service $AWS_ECS_SERVICE_PROD --task-definition $AWS_ECS_TD_PROD:$LATEST_TD_REVISION
+        //         #aws ecs wait services-stable --cluster LearnJenkinsApp-cluster-prod --services LearnJenkinsApp-TaskDefinition-Prod-service
+        //         aws ecs wait services-stable --cluster $AWS_ECS_CLUSTER --services $AWS_ECS_SERVICE_PROD
+        //         '''
+        //         }
+        //     }
+        // }
+
+        stage('Build') {
+            agent {
+                docker {
+                    image 'node:18-alpine'
+                    reuseNode true
+                }
+            }
+            steps {
+                sh '''
+                    ls -la
+                    node --version
+                    npm --version
+                    npm ci
+                    npm run build
+                    ls -la
+                '''
+            }
+        }
+
+    stage('Build Docker image') {
+            steps {
+                sh 'docker build -t my-jenkinsapp .'
+            }
+        }
+
+    stage('AWS') {
         agent{
             docker{
                 image 'amazon/aws-cli'
@@ -355,25 +407,6 @@ pipeline {
                 aws ecs wait services-stable --cluster $AWS_ECS_CLUSTER --services $AWS_ECS_SERVICE_PROD
                 '''
                 }
-            }
-        }
-
-        stage('Build') {
-            agent {
-                docker {
-                    image 'node:18-alpine'
-                    reuseNode true
-                }
-            }
-            steps {
-                sh '''
-                    ls -la
-                    node --version
-                    npm --version
-                    npm ci
-                    npm run build
-                    ls -la
-                '''
             }
         }
     }
