--- a/JenkinsFile
+++ b/JenkinsFile
@@ -378,6 +378,14 @@ pipeline {
         }
 
     stage('Build Docker image') {
+        agent{
+            docker{
+                image 'amazon/aws-cli'
+                reuseNode true
+                args "-u root --entrypoint=''"
+            }
+        }
+        
             steps {
                 sh 'docker build -t my-jenkinsapp .'
             }
