build docker image

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -387,7 +387,10 @@ pipeline {
         }
         
             steps {
-                sh 'docker build -t my-jenkinsapp .'
+                 sh '''
+                    amazon-linux-extras install docker
+                    docker build -t my-jenkinsapp .
+                '''
             }
         }
 
