added jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -378,21 +378,23 @@ pipeline {
         }
 
         stage('Build Docker image') {
-            agent{
-                docker{
+            agent {
+                docker {
                     image 'amazon/aws-cli'
                     reuseNode true
                     args "-u root -v /var/run/docker.sock:/var/run/docker.sock --entrypoint=''"
                 }
             }
-            
-                steps {
-                    sh '''
-                        amazon-linux-extras install docker
-                        docker build -t my-jenkinsapp .
-                    '''
-                }
+            steps {
+                sh '''
+                    amazon-linux-extras install docker
+                    yum install -y docker
+                    service docker start
+                    docker version
+                    docker build -t my-jenkinsapp .
+                '''
             }
+        }
 
         stage('AWS') {
             agent{
