--- a/JenkinsFile
+++ b/JenkinsFile
@@ -380,7 +380,8 @@ pipeline {
         stage('Build Docker image') {
             agent{
                 docker{
-                    image 'amazon/aws-cli'
+                    // image 'amazon/aws-cli'
+                    image 'amazonlinux:2'
                     reuseNode true
                     args "-u root -v /var/run/docker.sock:/var/run/docker.sock --entrypoint=''"
                 }
@@ -391,11 +392,17 @@ pipeline {
                         #amazon-linux-extras install docker
                         #docker build -t my-jenkinsapp .
 
-                        apk update
-                        apk add docker
-                        dockerd & sleep 5
+                        yum install -y amazon-linux-extras
+                        amazon-linux-extras install docker -y
+                        yum install -y docker
+                        service docker start
+                        curl \"https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip\" -o \"awscliv2.zip\"
+                        unzip awscliv2.zip
+                        ./aws/install
                         docker version
+                        aws --version
                         docker build -t my-jenkinsapp .
+                        
                     '''
                 }
             }
