--- a/JenkinsFile
+++ b/JenkinsFile
@@ -320,7 +320,7 @@
 
 pipeline {
     agent any
-
+                        yum install -y docker unzip
     environment {
         REACT_APP_VERSION = "1.0.$BUILD_ID"
         AWS_DEFAULT_REGION = 'us-east-1'
