--- a/JenkinsFile
+++ b/JenkinsFile
@@ -398,9 +398,7 @@ pipeline {
                         yum install -y docker unzip
                         
                         dockerd & sleep 5
-                        curl \"https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip\" -o \"awscliv2.zip\"
-                        unzip awscliv2.zip
-                        ./aws/install
+                        yum install -y awscli
                         docker version
                         aws --version
                         docker build -t my-jenkinsapp .
