--- a/JenkinsFile
+++ b/JenkinsFile
@@ -383,7 +383,7 @@ pipeline {
                     //image 'amazon/aws-cli'
                     image 'amazonlinux:2'
                     reuseNode true
-                    args "-u root --entrypoint=''"
+                    args "-u root -v /var/run/docker.sock:/var/run/docker.sock --entrypoint=''"
                 }
             }
             
