modified the changes

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -381,7 +381,8 @@ pipeline {
             agent{
                 docker{
                     //image 'amazon/aws-cli'
-                    image 'amazonlinux:2'
+                    //image 'amazonlinux:2'
+                    image 'my-aws-cli'
                     reuseNode true
                     args "-u root -v /var/run/docker.sock:/var/run/docker.sock --entrypoint=''"
                 }
@@ -392,7 +393,7 @@ pipeline {
                         #amazon-linux-extras install docker
                         #docker build -t my-jenkinsapp .
 
-                        amazon-linux-extras install docker -y
+                        #amazon-linux-extras install docker -y
                         docker build -t my-jenkinsapp .
                         
                     '''
@@ -407,7 +408,8 @@ pipeline {
         stage('AWS') {
             agent{
                 docker{
-                    image 'amazon/aws-cli'
+                    //image 'amazon/aws-cli'
+                    image 'my-aws-cli'
                     reuseNode true
                     args "-u root --entrypoint=''"
                 }
@@ -417,7 +419,7 @@ pipeline {
                 withCredentials([usernamePassword(credentialsId: 'my-aws', passwordVariable: 'AWS_SECRET_ACCESS_KEY', usernameVariable: 'AWS_ACCESS_KEY_ID')]) {
                     sh '''
                     aws --version
-                    yum install jq -y
+                    #yum install jq -y
                     #aws ecs register-task-definition --cli-input-json file://aws/task-definition.json
                     LATEST_TD_REVISION=$(aws ecs register-task-definition --cli-input-json file://aws/task-definition.json | jq '.taskDefinition.revision')
                     echo $LATEST_TD_REVISION
