--- a/JenkinsFile
+++ b/JenkinsFile
@@ -394,6 +394,10 @@ pipeline {
                         #docker build -t my-jenkinsapp .
 
                         #amazon-linux-extras install docker -y
+
+                        yum install -y awscli
+                        aws --version
+                        
                         docker build -t my-jenkinsapp .
                         
                     '''
