--- a/JenkinsFile
+++ b/JenkinsFile
@@ -395,7 +395,8 @@ pipeline {
 
                         #amazon-linux-extras install docker -y
 
-                        docker build -t my-jenkinsapp .
+                        #docker build -t my-jenkinsapp .
+                        docker buildx build --platform linux/amd64 -t my-jenkinsapp .
                         
                     '''
                 }
