--- a/ci/Dockerfile-aws-cli
+++ b/ci/Dockerfile-aws-cli
@@ -1,6 +1,10 @@
 FROM amazonlinux:2
 
-RUN amazon-linux-extras install docker -y
-RUN docker --version
-RUN aws --version
-RUN yum install jq -y
+RUN amazon-linux-extras install docker -y \
+	&& yum install -y jq unzip curl \
+	&& curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" \
+	&& unzip awscliv2.zip \
+	&& ./aws/install \
+	&& rm -rf awscliv2.zip aws \
+	&& docker --version \
+	&& aws --version
