--- a/ci/Dockerfile-aws-cli
+++ b/ci/Dockerfile-aws-cli
@@ -1,6 +1,7 @@
 FROM amazonlinux:2
 
-RUN amazon-linux-extras install docker -y \
+RUN yum install -y glibc libcurl \
+	&& amazon-linux-extras install docker -y \
 	&& yum install -y jq unzip curl \
 	&& curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" \
 	&& unzip awscliv2.zip \
