--- a/ci/Dockerfile-aws-cli
+++ b/ci/Dockerfile-aws-cli
@@ -1,11 +1,12 @@
 FROM amazonlinux:2
 
-RUN yum install -y glibc libcurl \
-	&& amazon-linux-extras install docker -y \
-	&& yum install -y jq unzip curl \
-	&& curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" \
-	&& unzip awscliv2.zip \
-	&& ./aws/install \
-	&& rm -rf awscliv2.zip aws \
-	&& docker --version \
-	&& aws --version
+#RUN yum install -y glibc libcurl
+RUN amazon-linux-extras install docker -y
+#RUN yum install -y jq unzip curl
+#RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+#RUN unzip awscliv2.zip
+#RUN ./aws/install
+#RUN rm -rf awscliv2.zip aws
+RUN yum install -y awscli
+RUN docker --version
+RUN aws --version
