--- a/ci/Dockerfile-aws-cli
+++ b/ci/Dockerfile-aws-cli
@@ -2,6 +2,6 @@ FROM amazonlinux:2
 
 RUN amazon-linux-extras install docker -y
 RUN yum install -y awscli
-RUN yum install jq -y
+RUN yum install -y jq
 RUN docker --version
 RUN aws --version
