--- a/JenkinsFile
+++ b/JenkinsFile
@@ -384,7 +384,7 @@ pipeline {
                     //image 'amazonlinux:2'
                     image 'my-aws-cli'
                     reuseNode true
-                    args "-v /var/run/docker.sock:/var/run/docker.sock --entrypoint=''"
+                    args "-u root -v /var/run/docker.sock:/var/run/docker.sock --entrypoint=''"
                 }
             }
             
@@ -412,6 +412,7 @@ pipeline {
                     //image 'amazon/aws-cli'
                     image 'my-aws-cli'
                     reuseNode true
+                    //args "-u root --entrypoint=''"
                     args "--entrypoint=''"
                 }
             }
